      have defaults for dbg and opt and a default set of ldflags. -lunittest++ is applied
      automatically by cc_test.
    * --no_cache has been changed to --nocache for consistency.
    * The -c argument to plz clean is now removed. Default is to clean the cache,
      and it honours the top-level --nocache flag if you don't want to clean that.


Version 1.4.9
-------------

    * 'plz clean' now backgrounds itself when possible, in which case the user can
      continue with other tasks with no delay.
    * Added licenses() builtin function for Bazel compatibility; it roughly parallels
      theirs in setting the default licence for all targets in a BUILD file. Implicitly
      we can also now use package(default_licences = [...]) which is equivalent.
    * + is now allowed in names of build rules.
    * Fixed .deb package to include plz_diff_graphs.


Version 1.4.8
-------------

    * Fixed a bug where Please would sometimes panic during coverage display.
    * 'plz query graph' now includes all transitive dependencies of requested targets
      as well as the targets themselves.


Version 1.4.7
-------------

    * Quoting of expansions in shell commands now only happens when needed.
    * $PKG variable is available to test commands as well.
    * $ROOT_DIR variable is no longer available to any commands.


Version 1.4.6
-------------

    * Added a 'tools' attribute on genrules which refers to things used to build a rule
      which aren't copied into the temp directory.
    * Fixed bug where filegroup() didn't correctly honour the binary flag.


Version 1.4.5
-------------

    * Fix debs to have .jar suffix correctly.
    * cc_library now correctly supports multiple srcs. As a result it produces a single .a
      always instead of .o files. 'archive' attribute is now deprecated.


Version 1.4.4
-------------

    * Make timeout for retrieving Dockerised test results configurable, and default to
      a higher value.